--- a/Thesis/3-Project.tex
+++ b/Thesis/3-Project.tex
@@ -2,23 +2,23 @@
 
 \section{Motivation}
 
-\todoin{Why the quintic?}
-
-\todoin{Why study SLags?}
+%\todoin{Why the quintic?}
+%
+%\todoin{Why study SLags?}
 
 \section{SLags on Fermat's quintic}
 In this section, we describe Fermat's quintic and study the properties of SLag three-cycles 
 defined on this manifold.
 
 \subsection{Fermat's quintic}
-Chow's theorem asserts  that any $(n-r)$-dimensional submanifold of $\mathbb{CP}^n$ can be realized as the zero locus of $r$-homogeneous polynomial equations.
-This suggests Calabi-Yau manifolds as submanifolds of a complex projective space
-\todoin{Motivate better}
-
+%The construction of generic Calabi-Yau manifolds is a 
+%Chow's theorem asserts  that any $(n-r)$-dimensional submanifold of $\mathbb{CP}^n$ can be realized as the zero locus of $r$-homogeneous polynomial equations.
+%\todoin{Motivate better}
 The complex projective space $\mathbb{CP}^n$ is defined considering the complex space minus the origin $\mathbb{C}^{n+1}\backslash\qty{0}$
 and establishing the equivalence relation $( z_0,\ldots, z_{n})\sim(\lambda z_0,\ldots,\lambda z_{n})$, $\lambda\in\mathbb C$.
-To emphasize that $z_i$ are homogeneous coordinates, they are sometimes denoted as $\qty[z_0:\ldots:z_{n}]$.
-The local (non-homogeneous) coordinates $\xi^i$ of a $j$-patch where $z_j\neq0$ are obtained by choosing $\lambda=1/z_j$ so
+%To emphasize that $z_i$ are homogeneous coordinates, they are sometimes denoted as $\qty[z_0:\ldots:z_{n}]$.
+The local (non-homogeneous) coordinates $\xi^i$ of a $j$-patch where $z_j\neq0$ are obtained  in
+terms of the homogeneous coordinates $z_i$ by choosing $\lambda=1/z_j$ so
 \begin{equation}
   (\xi^1_j,\ldots,\xi^n_j)=\qty(\frac{z_0}{z_j},\ldots,\frac{z_{j-1}}{z_j},\frac{z_{j+1}}{z_j},\ldots,\frac{z_{n}}{z_j}).
 \end{equation}
@@ -37,7 +37,7 @@ The number of independent monomials of degree $d$ in $n+1$ variables is given by
 \begin{equation}
   \# \text{ indep. monomials}={{d+(n+1)-1}\choose{(n+1)-1}}
 \end{equation}
-But not all of these lead to different manifolds, since some of them can be related through coordinate transformations, 
+Not all of these lead to different manifolds, since some of them can be related through coordinate transformations, 
 which belong to complex general linear group $GL(\mathbb C)_{n+1}$.
 Thus, the number of possible submanifolds is given by
 \begin{equation}
@@ -47,7 +47,7 @@ Among of the ${{9}\choose{4}}-5^5=101$ possible submanifolds of $\mathbb{CP}^4$ 
 Fermat's quintic threefold defined by the polynomial $P_5$ as
 \begin{equation}
   %P_4(z)& = z_0^5+z_1^5+z_2^5+z_3^5=0\\
-  P_5(z)& = z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0.
+  P_5(z) = z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0.
 \end{equation}
 
 \subsection{Construction of SLags}
@@ -59,7 +59,6 @@ In the case of Fermat's quintic leads it to the following SLag
 \begin{equation}
   \qty{\qty[x_0:x_1:x_2:x_3:x_4]\in  \mathbb{RP}^4| x_0^5+x_1^5+x_2^5+x_3^5+x_4^5=0}.
 \end{equation}
-\todoin{This is the space where O6-planes lie. Think dim O6-planes and sLags}
 This subspace is topologically equivalent to $\mathbb{RP}^3$, which can be noticed through the
 homeomorphism from $\mathbb{RP}^3$ to the SLag:
 \begin{equation}
@@ -68,8 +67,7 @@ homeomorphism from $\mathbb{RP}^3$ to the SLag:
 
 In order to prove that the obtained subspace is indeed special-Lagrangian we must
 verify that the Kähler form vanishes at the SLag and that it is calibrated with respect to the
-same three-form as $\Omega_3$.
-\todoin{Clarify}
+same three-form as the $\Omega_3$ of the quintic.
 \begin{itemize}
   \item The Kähler form $k$ transforms under the anti-holomorphic involution as $k\to -k$, 
     but since the pull-back of $k$ onto the three-dimensional subspace must be real, 
@@ -77,12 +75,11 @@ same three-form as $\Omega_3$.
 
   \item 
 The holomorphic three-form in a non-homogeneous patch where $x_0\neq0$ is
-\todoin{Justify, what do we integrate and why}
 \begin{equation}
-  \Omega_3=\frac{4}{2\pi i}\int \frac{x_0 dx_1\wedge dx_2 \wedge dx_3 \wedge dx_4}{P_5(x_i)}
+  \Omega_3=\frac{4}{2\pi i}\int \frac{x_0 dx_1\wedge dx_2 \wedge dx_3 \wedge dx_4}{P_5(x_i)}.
   \label{eq:3form}
 \end{equation}
-if we interpret $x_4$ as a function of $P_5$ and integrate over a loop around $P_5=0$
+If we interpret $x_4$ as a function of $P_5$ and integrate over a loop around $P_5=0$
 \begin{equation}
   \Omega_3=\frac{x_0 dx_1\wedge dx_2 \wedge dx_3}{x_4^4}
   =\frac{dy_1\wedge dy_2\wedge dy_3}{y_4^4}
@@ -90,16 +87,13 @@ if we interpret $x_4$ as a function of $P_5$ and integrate over a loop around $P
 where we have defined the local coordinates $y_i=x_i/x_0$.
 By taking the norm of the previous equation, we relate $\Omega_3$ to the determinant of the 
 six-dimensional metric
-\todoin{Clarify step}
+\todoin{Why metric appears?}
 \begin{equation}
   ||\Omega_3||^2 = \frac{1}{\det g |y_4|^8}.
 \end{equation}
 Since $\Omega_3$ is covariantly constant, $||\Omega_3||$ must also be proportional to a constant defined as
 \begin{equation}
   ||\Omega_3||^2 = 8e^{2\kappa}.
-\end{equation}
-\begin{equation}
-  \det g = \frac{e^{-2\kappa}}{8|y_4|^8}
 \end{equation}
 The pull-back of the six-dimensional metric onto the three-cycle is
 \begin{equation}
@@ -110,7 +104,7 @@ So the volume form of the SLag three-cycle coincides with $\Omega_3$
   e^k \sqrt{\det h_{ab}}d\sigma^1\wedge d\sigma^2\wedge d\sigma^3
   =e^k |\det \partial y| \frac{e^{-\kappa}}{|y_4|^4}d\sigma^1\wedge d\sigma^2\wedge d\sigma^3=\Omega_3
 \end{equation}
-\todoin{Ask reasoning}
+\todoin{Why lhs has that form?}
 \end{itemize}
 
 It is possible to define different SLags by exploiting the $\mathbb Z_5^4$ symmetry of the quintic,
@@ -121,8 +115,8 @@ which leads to a whole family of SLags
 where $\omega=e^{i\frac{2\pi}{5}}$. 
 The freedom to choose of $k_i\in \mathbb Z_5$ leads to $5^4=625$ SLag three-cycles, but not all of them are calibrated
 with respect to the same three-form as O$6$-plane $\ket{0,0,0,0,0}$.
-$\sum_{i} k_i^4=0 \text{ mod 5}$
-so only $125$ SLags are calibrated with respect to the same three-form as the O$6$-plane.
+%$\sum_{i} k_i^4=0 \text{ mod 5}$
+Concretely, only $125$ SLags are calibrated with respect to the same three-form as the O$6$-plane.
 
 \subsection{Moduli space of SLags}
 
@@ -153,7 +147,7 @@ we must arrange the $a^i$ and $\phi_i$ into a complex scalar field
 
 We can now apply the previous reasoning to SLag three-cycles defined on Fermat's quintic.
 Since $H^1(\mathbb{RP}^3)\simeq H_1(\mathbb{RP}^3)\simeq\mathbb Z_2$, there are no continuous deformations of the
-SLags and they are guaranteed to remain stable.
+SLags and the SLags are guaranteed to remain stable.
 
 \subsection{Intersection numbers}
 We now study the intersection numbers between different SLags, which are used to determine the number 
@@ -175,162 +169,178 @@ The intersection numbers in this patch are:
     When we restrict this line in $\mathbb{CP}^4$ to the quintic hypersurface, the intersection reduces to the point $(1,0,0,0,-1)$.
     The signature of the intersection is $\mathrm{sgn}(\Im \omega^{k_1}\Im\omega^{k_2}\Im\omega^{k_3})$. 
 
-  \item If $\omega_i^{k_i}\neq 1$ for at least two different values of $k_i$, we have to deform one of the SLags.
-    \begin{itemize}
-  \item
-    $I_{\mathbb{RP}^3}=0$
-  \item 
-    $I_{\mathbb{RP}^2}=1$
-  \item 
-    $I_{\mathbb{RP}^3}=0$
+%  \item If $\omega_i^{k_i}\neq 1$ for at least two different values of $i$, we have to deform one of the SLags. 
+%    The deformation must be normal to both SLags and through McLean's theorem  we identify the normal bundle of the intersection
+%    with its tangent space.
+%    Then, the intersection number is the number of zero vectors on the tangent space of the intersection.
+%    \todoin{``intersection number equals the number of zeros of a section of the tangent bundle of the intersection locus.``->Is it the minimum number of zero sections. Can't we have a tangent field to the circle that is zero?}
+%    \begin{itemize}
+%  \item
+%    If $\omega_i^{k_i}\neq 1$ for two $i$'s, the intersection is $[1:0:0:x_3:x_4]$, which is homeomorphic to the circle.
+%    $I_{\mathbb{RP}^3}=0$
+%  \item 
+%     If $\omega_i^{k_i}\neq 1$ for three $i$'s, the intersection is $[1:0:0:x_3:x_4]$, which is homeomorphic to the circle.
+%$I_{\mathbb{RP}^2}=1$
+%  \item 
+%    If $\omega_i^{k_i}\neq 1$ for four $i$'s, the intersection is $\mathbb{RP}^3$, which is homeomorphic to $S^3$
+%$I_{\mathbb{RP}^3}=0$
     \end{itemize}
 \end{itemize}
 
+To compute the total intersection number, we would have to repeat this procedure in all patches
+and the add all the obtained intersection numbers.
+The total intersection number of $\ket{0,0,0,0,0}$ with 
+
 \subsection{Volumes}
+We now try to compute the volume of SLag three-cycles, as the carry information of the four-dimensional
+gauge theory supported by the wrapping D$6$-branes, such as the gauge coupling.
+\todoin{Complete}
+$\ket{0,0,0,0,0}$, since a generic SLag can be obtained through $\mathbb Z_4$ rotations.
+The holomorphic three-form on a patch $x_0\neq0$ in terms of the local coordinates $y_i$ is
 \begin{equation}
   \Omega_3=\frac{dy_1\wedge dy_2\wedge dy_3}{5y_4^4}
 \end{equation}
-
-
+The volume of the SLag is obtained integrating $\Omega_3$ over the three-cycle
 \begin{equation}
-  \int \frac{dy_1\wedge dy_2\wedge dy_3}{5(1+y_1^4+y_2^4+y_3^4)^{4/5}}
+  \mathrm{Vol}=\int \frac{dy_1\wedge dy_2\wedge dy_3}{5(1+y_1^4+y_2^4+y_3^4)^{4/5}}
 \end{equation}
+It is not evident how to compute this integral, due to the non-trivial integration domain.
+
+In principle, the calculation of the volume of a SLag can be reduced to the 
+We can tran
+\todoin{Alternative}
+SLag three-cycle is homeomorphic to the $\mathbb{RP}^3$, which in turn is diffeomorphic to the
+the rotation group $SO(3)$. 
+Considering that we there is a map from $S^3$ with antipodal points identified onto $SO(3)$,
+we conclude that the volume of a SLag is half the volume of a corresponding three-sphere on the quintic.
+In practice, we can make no further progress through this approach, since we do not know
+the Calabi-Yau metric of the quintic.
+
+
 
 \subsection{SM on the quintic}
 
-%\section{SLags on the deformed quintic}
-%
-%\subsection{Deformations of the quintic}
-%
-%A generalization of Fermat's quintic consists in considering hypersurfaces defined by a generic polynomial of degree five
-%\begin{equation}
-%  P_5(z)=\sum_{n_0+n_1+n_2+n_3+n_4=5} a_{n_0 n_1 n_2 n_3 n_4} z_0^{n_0}z_1^{n_1}z_2^{n_2}z_3^{n_3}z_4^{n_4}=0
-%\end{equation}
-%This construction reduces to Fermat's quintic when $a_{50000}=a_{50000}=a_{50000}=a_{50000}=a_{50000}=1$ and all other coefficients are zero.
-%A well-know example is
-%\begin{equation}
-%  z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0
-%\end{equation}
-% where the parameter $\psi$ can take three values of particular relevance
-%\begin{itemize}
-%  \item $\psi=1$: the Fermat (or Gepner point).
-%  \item $\psi=0$: the conifold point.
-%  \item $\psi=\infty$: the large complex structure limit.
-%\end{itemize}
-%
-%We can deform Fermat's quintic by adding a monomial to the defining polynomial.
-%The possible monomials are of the type:
-%\begin{enumerate}
-%  \item $z_0z_1z_2z_3z_4$, $1$ deformation.
-%  \item $z_i z_j z_k(z_l)^2$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations. 
-%  \item $z_i(z_j)^k(z_l)^2$, ${5}\choose{1}$${4}\choose{2}$$=30$ deformations.
-%  \item $z_i z_j(z_k)^3$, ${5}\choose{2}$${3}\choose{1}$$=30$ deformations.
-%  \item $(z_i)^2(z_j)^3$, ${5}\choose{1}$${4}\choose{1}$$=20$ deformations.
-%  \item $z_i(z_j)^4$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations.
-%\end{enumerate}
-%In total there are $126$ deformations, but they are not all independent, since they 
-%can be related through coordinate transformations.
-%Subtracting  $25$ we $101$ deformation parameters.
-%This is precisely the Hodge number $h_{2,1}=101$, since the defining homogeneous polynomial  
-%represents a particular choice of the complex structure, which is given by 
-%harmonic $(2,1)$-form in $H^{2,1}(X,\mathbb C)$.
-%The deformations of Kähler structure is given by the $h^{1,1}$ and is precisely one.
-%
-%Fermat's quintic enjoys the $\mathbb Z_5^4$ symmetry acting on the homogeneous coordinates 
-%\begin{equation}
-%  z_i \to \omega^k_i z_i, \qquad \omega_i=e^{i\frac{2\pi}{5}}
-%\end{equation}
-%which can be broken into a smaller subgroup when turning on deformations.
-%We should also examine whether deformations introduce any singularities, which
-%are defined as the points 
-%\begin{equation}
-%  P_5(X)=0, \qquad dP_5=0
-%\end{equation}
-%The nature of the singularity is obtained by evaluating the Hessian at the singularity.
-%That is calculating $d^2 P_5$ in a local coordinate patch, where one of the homogeneous coordinate is non-zero.
-%\todoin{Complete}
-%
-%We proceed to examine the singularities and associated symmetry subgroups of the deformations.
-%\begin{enumerate}
-%  \item No deformations.
-%
-%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0$ The only point where $dP_5=0$ is  $(0,0,0,0,0)$, which 
-%    is not part of $\mathbb{CP}^4$, so 
-%
-%  \item $5\psi z_0z_1z_2z_3z_4$
-%
-%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0$
-%
-%    The singularities are located at:
-%    \begin{equation}
-%      z_i^5=\psi x_0x_1x_2x_3x_4
-%    \end{equation}
-%    \begin{equation}
-%      \Pi z_i^5=\psi^5 ( x_0x_1x_2x_3x_4 )^5
-%    \end{equation}
-%    so in order to obtain a singular point, $\psi^5=1$.
-%    Taking $\psi=1$, there a single singular point $(1,1,1,1,1)$ which is a node, since the Hessian doesn't vanish.
-%    Locally, the node can be recast into a conifold singularity.
-%
-%  \item $5\psi z_0z_1z_2(z_3)^2$
-%
-%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
-%
-%    Singularities in the coordinate patch where $z_3=1$
-%    \begin{equation}
-%      (\frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, 1,0) 
-%    \end{equation}
-%    $\psi=\frac{1}{\sqrt[5]{2}}$
-%
-%  \item $5\psi z_0(z_1)^2(z_2)^2$
-%
-%    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
-%
-%    \begin{equation}
-%      (1, \sqrt[5]{2}, \sqrt[5]{2}, 0, 0)
-%    \end{equation}
-%    $\psi=\frac{1}{\sqrt[5]{2^4}}$
-%
-%  \item $5\psi z_0z_1(z_2)^3$
-%
-%    \begin{equation}
-%      (\sqrt[5]{3}, \sqrt[5]{3},1, 0, 0)
-%    \end{equation}
-%    $\psi=\frac{1}{\sqrt[5]{3^3}}$
-%
-%  \item $5\psi (z_0)^2(z_1)^3$
-%
-%    \begin{equation}
-%      (1, \sqrt[5]{\frac{3}{2}}, 0, 0, 0)
-%    \end{equation}
-%    $\psi=\frac{1}{\sqrt[5]{3^3}}$
-%
-%  \item $5\psi z_0(z_1)^4$
-%
-%    \begin{equation}
-%      (1, \sqrt[5]{4}, 0, 0, 0)
-%    \end{equation}
-%    $\psi=\frac{1}{\sqrt[5]{4^4}}$
-%
-%    \todoin{Check values, add words}
-%\end{enumerate}
-%
-%\subsection{SLags on the deformed quintic}
-%\todoin{Generalities. Special case. Generalization}
+\section{SLags on the deformed quintic}
+
+\subsection{Deformations of the quintic}
+
+A generalization of Fermat's quintic consists in considering hypersurfaces defined by a generic polynomial of degree five
+\begin{equation}
+  P_5(z)=\sum_{n_0+n_1+n_2+n_3+n_4=5} a_{n_0 n_1 n_2 n_3 n_4} z_0^{n_0}z_1^{n_1}z_2^{n_2}z_3^{n_3}z_4^{n_4}=0
+\end{equation}
+This construction reduces to Fermat's quintic when $a_{50000}=a_{50000}=a_{50000}=a_{50000}=a_{50000}=1$ and all other coefficients are zero.
+A well-know example is
+\begin{equation}
+  z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0
+\end{equation}
+ where the parameter $\psi$ can take three values of particular relevance
+\begin{itemize}
+  \item $\psi=1$: the Fermat (or Gepner point).
+  \item $\psi=0$: the conifold point.
+  \item $\psi=\infty$: the large complex structure limit.
+\end{itemize}
+
+We can deform Fermat's quintic by adding a monomial to the defining polynomial.
+The possible monomials are of the type:
+\begin{enumerate}
+  \item $z_0z_1z_2z_3z_4$, $1$ deformation.
+  \item $z_i z_j z_k(z_l)^2$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations. 
+  \item $z_i(z_j)^k(z_l)^2$, ${5}\choose{1}$${4}\choose{2}$$=30$ deformations.
+  \item $z_i z_j(z_k)^3$, ${5}\choose{2}$${3}\choose{1}$$=30$ deformations.
+  \item $(z_i)^2(z_j)^3$, ${5}\choose{1}$${4}\choose{1}$$=20$ deformations.
+  \item $z_i(z_j)^4$, ${5}\choose{3}$${2}\choose{1}$$=20$ deformations.
+\end{enumerate}
+In total there are $126$ deformations, but they are not all independent, since they 
+can be related through coordinate transformations.
+Subtracting  $25$ we $101$ deformation parameters.
+This is precisely the Hodge number $h_{2,1}=101$, since the defining homogeneous polynomial  
+represents a particular choice of the complex structure, which is given by 
+harmonic $(2,1)$-form in $H^{2,1}(X,\mathbb C)$.
+The deformations of Kähler structure is given by the $h^{1,1}$ and is precisely one.
+
+Fermat's quintic enjoys the $\mathbb Z_5^4$ symmetry acting on the homogeneous coordinates 
+\begin{equation}
+  z_i \to \omega^k_i z_i, \qquad \omega_i=e^{i\frac{2\pi}{5}}
+\end{equation}
+which can be broken into a smaller subgroup when turning on deformations.
+We should also examine whether deformations introduce any singularities, which
+are defined as the points 
+\begin{equation}
+  P_5(X)=0, \qquad dP_5=0
+\end{equation}
+The nature of the singularity is obtained by evaluating the Hessian at the singularity.
+That is calculating $d^2 P_5$ in a local coordinate patch, where one of the homogeneous coordinate is non-zero.
+\todoin{Complete}
+
+We proceed to examine the singularities and associated symmetry subgroups of the deformations.
+\begin{enumerate}
+  \item No deformations.
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5=0$ The only point where $dP_5=0$ is  $(0,0,0,0,0)$, which 
+    is not part of $\mathbb{CP}^4$, so 
+
+  \item $5\psi z_0z_1z_2z_3z_4$
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2z_3z_4=0$
+
+    The singularities are located at:
+    \begin{equation}
+      z_i^5=\psi x_0x_1x_2x_3x_4
+    \end{equation}
+    \begin{equation}
+      \Pi z_i^5=\psi^5 ( x_0x_1x_2x_3x_4 )^5
+    \end{equation}
+    so in order to obtain a singular point, $\psi^5=1$.
+    Taking $\psi=1$, there a single singular point $(1,1,1,1,1)$ which is a node, since the Hessian doesn't vanish.
+    Locally, the node can be recast into a conifold singularity.
+
+  \item $5\psi z_0z_1z_2(z_3)^2$
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
+
+    Singularities in the coordinate patch where $z_3=1$
+    \begin{equation}
+      (\frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, \frac{1}{\sqrt[5]{2}}, 1,0) 
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{2}}$
+
+  \item $5\psi z_0(z_1)^2(z_2)^2$
+
+    $z_0^5+z_1^5+z_2^5+z_3^5+z_4^5- 5\psi z_0z_1z_2(z_3)^2=0$
+
+    \begin{equation}
+      (1, \sqrt[5]{2}, \sqrt[5]{2}, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{2^4}}$
+
+  \item $5\psi z_0z_1(z_2)^3$
+
+    \begin{equation}
+      (\sqrt[5]{3}, \sqrt[5]{3},1, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{3^3}}$
+
+  \item $5\psi (z_0)^2(z_1)^3$
+
+    \begin{equation}
+      (1, \sqrt[5]{\frac{3}{2}}, 0, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{3^3}}$
+
+  \item $5\psi z_0(z_1)^4$
+
+    \begin{equation}
+      (1, \sqrt[5]{4}, 0, 0, 0)
+    \end{equation}
+    $\psi=\frac{1}{\sqrt[5]{4^4}}$
+
+    \todoin{Check values, add words}
+\end{enumerate}
+
+\subsection{SLags on the deformed quintic}
+\todoin{Generalities. Special case. Generalization}
 
 
-%The consider the possible deformations of Fermat's quintic.
-%There should be $101$ independent deformations, since they correspond to different complex 
-%structures and are given be the Hodge number $h_{21}=101$.
-%
-%We can add terms of the following type to the quintic
-%
-%\begin{equation}
-%  x_i^5, x_i^4 x_j^1, x_i^3 x_j^2, x_i^3 x_j x_k, x_i^2 x_j x_k x_l, x_1 x_2 x_3 x_4 x_5
-%\end{equation}
-%
-%Not all of these terms are independent, since a coordinate redefinition $GL(5,\mathbb C)$.
-%
 %\todoin{Deformation classification}
 %
 %\todoin{Coordinate redefinition freedom}
